--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,9 +1,15 @@
 book_filename: "bookdownproj"
 bibliography: ["references.bib"]
-output_dir: "docs" 
+output_dir: "docs"
 delete_merged_file: true
+
+rmd_files:
+  - "index.Rmd"
+  - "03-cursoR.Rmd"
+
 edit: https://github.com/ncamposbijit/ncamposbijit/Analisis-de-Datos-Stata-nivel-avanzado/edit/main/%s
 view: https://github.com/ncamposbijit/ncamposbijit/Analisis-de-Datos-Stata-nivel-avanzado/blob/main/%s
+
 language:
   ui:
     chapter_name:
