--- a/_output.yml
+++ b/_output.yml
@@ -1,8 +1,13 @@
 bookdown::bs4_book:
   theme:
-    primary: "#0B3D91"
-    base_font: {google: "Source Sans 3"}
-    heading_font: {google: "Source Sans 3"}
-    code_font: {google: "IBM Plex Mono"}
+    primary: "#2D3748"
+    bg: "#FFFFFF"
+    fg: "#1A202C"
+    base_font:
+      google: "Inter"
+    heading_font:
+      google: "Inter"
+    code_font:
+      google: "JetBrains Mono"
   css: style4.css
   repo: null
